refactor(测试跟踪): 附件上传删除关联操作日志优化